# cpp_game

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLANG_TIDY_SETUP.md  CLANG_TIDY_STATUS.md  CMakeLists.txt  Dockerfile  LLVM_TOOLCHAIN_SETUP.md  PROJECT_SUMMARY.md  README.md  build.sh  clean.sh  run_clang_tidy.sh  setup_llvm_env.sh
.cursor/: settings.json
.cursor/rules/: README.mdc  ai-assistant.mdc  coding-standards.mdc  development-tools.mdc  documentation.mdc  project-structure.mdc  project.mdc  testing.mdc
.github/workflows/: cmake-single-platform.yml
assets/: config.json
include/: example.hpp
src/: example.cpp  main.cpp
src/engine/core/: config.cpp  config.h  game_app.cpp  game_app.h  time.cpp  time.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/render/: camera.cpp  camera.h  renderer.cpp  renderer.h  sprite.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  font_manager.cpp  font_manager.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/engine/utils/: math.h
tests/: CMakeLists.txt  test_main.cpp
